Update and rename index (1).html to index.html

--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
 <body>
     <div class="container">
         <h1>Orbis Arcana</h1>
-        <p class="hint">"You have found the right place. The whispers of the wind have guided you well. Click below to unveil the secret..."</p>
+        <p class="hint">"You’ve found the hidden mark. Power hums around you, and the answer lies within."</p>
         <button class="reveal-btn" onclick="revealCode()">Reveal the Secret</button>
-        <p id="secretCode" class="code-box">ARCANA42</p>
+        <p id="secretCode" class="code-box">ARBOR88</p>
     </div>
     
     <script>
